Local data train extractor and processor (adding index, simple vectorizing strings) added to testing impl dependency